ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-service-ingress
  namespace: devops
spec:
  ingressClassName: nginx
  rules:
  # - host: react.test.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service-svc
            port:
              number: 80
